RoslynRuleEngineConsole/xpath1w3/XPath1W3Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from XPath1W3.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class XPath1W3Parser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, Literal=44, NumericLiteral=45, 
		PITest=46, StringLiteral=47, IntegerLiteral=48, DecimalLiteral=49, Number=50, 
		Digits=51, AxisName=52, LiteralChar=53, WS=54, NCName=55, NCNameStartChar=56, 
		NCNameChar=57;
	public const int
		RULE_start = 0, RULE_exprSingle = 1, RULE_operatorExpr = 2, RULE_orExpr = 3, 
		RULE_andExpr = 4, RULE_equalityExpr = 5, RULE_relationalExpr = 6, RULE_additiveExpr = 7, 
		RULE_multiplicativeExpr = 8, RULE_unaryExpr = 9, RULE_unionExpr = 10, 
		RULE_valueExpr = 11, RULE_pathExpr = 12, RULE_relativePathExpr = 13, RULE_stepExpr = 14, 
		RULE_axisStep = 15, RULE_forwardStep = 16, RULE_forwardAxis = 17, RULE_abbrevForwardStep = 18, 
		RULE_reverseStep = 19, RULE_reverseAxis = 20, RULE_abbrevReverseStep = 21, 
		RULE_nodeTest = 22, RULE_nameTest = 23, RULE_wildCard = 24, RULE_predicate = 25, 
		RULE_primaryExpr = 26, RULE_varRef = 27, RULE_varName = 28, RULE_parenthesizedExpr = 29, 
		RULE_contextItemExpr = 30, RULE_functionCall = 31, RULE_kindTest = 32, 
		RULE_anyKindTest = 33, RULE_textTest = 34, RULE_commentTest = 35, RULE_nCName = 36, 
		RULE_qName = 37, RULE_functionQName = 38;
	public static readonly string[] ruleNames = {
		"start", "exprSingle", "operatorExpr", "orExpr", "andExpr", "equalityExpr", 
		"relationalExpr", "additiveExpr", "multiplicativeExpr", "unaryExpr", "unionExpr", 
		"valueExpr", "pathExpr", "relativePathExpr", "stepExpr", "axisStep", "forwardStep", 
		"forwardAxis", "abbrevForwardStep", "reverseStep", "reverseAxis", "abbrevReverseStep", 
		"nodeTest", "nameTest", "wildCard", "predicate", "primaryExpr", "varRef", 
		"varName", "parenthesizedExpr", "contextItemExpr", "functionCall", "kindTest", 
		"anyKindTest", "textTest", "commentTest", "nCName", "qName", "functionQName"
	};

	private static readonly string[] _LiteralNames = {
		null, "'or'", "'and'", "'='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", 
		"'-'", "'*'", "'div'", "'mod'", "'|'", "'/'", "'//'", "'child'", "'::'", 
		"'descendant'", "'attribute'", "'self'", "'descendant-or-self'", "'following-sibling'", 
		"'following'", "'namespace'", "'@'", "'parent'", "'ancestor'", "'preceding-sibling'", 
		"'preceding'", "'ancestor-or-self'", "'..'", "':'", "'['", "']'", "'$'", 
		"'('", "')'", "'.'", "','", "'node'", "'test'", "'comment'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "Literal", "NumericLiteral", 
		"PITest", "StringLiteral", "IntegerLiteral", "DecimalLiteral", "Number", 
		"Digits", "AxisName", "LiteralChar", "WS", "NCName", "NCNameStartChar", 
		"NCNameChar"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "XPath1W3.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public XPath1W3Parser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class StartContext : ParserRuleContext {
		public ExprSingleContext exprSingle() {
			return GetRuleContext<ExprSingleContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(XPath1W3Parser.Eof, 0); }
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		try {
			State = 80;
			switch (TokenStream.La(1)) {
			case T__0:
			case T__1:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__14:
			case T__15:
			case T__16:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__35:
			case T__36:
			case T__38:
			case T__40:
			case T__41:
			case T__42:
			case Literal:
			case PITest:
			case AxisName:
			case NCName:
				EnterOuterAlt(_localctx, 1);
				{
				State = 78; exprSingle();
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				State = 79; Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprSingleContext : ParserRuleContext {
		public OrExprContext orExpr() {
			return GetRuleContext<OrExprContext>(0);
		}
		public ExprSingleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exprSingle; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprSingle(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprSingleContext exprSingle() {
		ExprSingleContext _localctx = new ExprSingleContext(Context, State);
		EnterRule(_localctx, 2, RULE_exprSingle);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82; orExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperatorExprContext : ParserRuleContext {
		public OrExprContext orExpr() {
			return GetRuleContext<OrExprContext>(0);
		}
		public OperatorExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operatorExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperatorExprContext operatorExpr() {
		OperatorExprContext _localctx = new OperatorExprContext(Context, State);
		EnterRule(_localctx, 4, RULE_operatorExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84; orExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrExprContext : ParserRuleContext {
		public AndExprContext[] andExpr() {
			return GetRuleContexts<AndExprContext>();
		}
		public AndExprContext andExpr(int i) {
			return GetRuleContext<AndExprContext>(i);
		}
		public OrExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrExprContext orExpr() {
		OrExprContext _localctx = new OrExprContext(Context, State);
		EnterRule(_localctx, 6, RULE_orExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86; andExpr();
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__0) {
				{
				{
				State = 87; Match(T__0);
				State = 88; andExpr();
				}
				}
				State = 93;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AndExprContext : ParserRuleContext {
		public EqualityExprContext[] equalityExpr() {
			return GetRuleContexts<EqualityExprContext>();
		}
		public EqualityExprContext equalityExpr(int i) {
			return GetRuleContext<EqualityExprContext>(i);
		}
		public AndExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_andExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAndExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AndExprContext andExpr() {
		AndExprContext _localctx = new AndExprContext(Context, State);
		EnterRule(_localctx, 8, RULE_andExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; equalityExpr();
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__1) {
				{
				{
				State = 95; Match(T__1);
				State = 96; equalityExpr();
				}
				}
				State = 101;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EqualityExprContext : ParserRuleContext {
		public RelationalExprContext[] relationalExpr() {
			return GetRuleContexts<RelationalExprContext>();
		}
		public RelationalExprContext relationalExpr(int i) {
			return GetRuleContext<RelationalExprContext>(i);
		}
		public EqualityExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_equalityExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqualityExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EqualityExprContext equalityExpr() {
		EqualityExprContext _localctx = new EqualityExprContext(Context, State);
		EnterRule(_localctx, 10, RULE_equalityExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102; relationalExpr();
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__2 || _la==T__3) {
				{
				{
				State = 103;
				_la = TokenStream.La(1);
				if ( !(_la==T__2 || _la==T__3) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 104; relationalExpr();
				}
				}
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RelationalExprContext : ParserRuleContext {
		public AdditiveExprContext[] additiveExpr() {
			return GetRuleContexts<AdditiveExprContext>();
		}
		public AdditiveExprContext additiveExpr(int i) {
			return GetRuleContext<AdditiveExprContext>(i);
		}
		public RelationalExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relationalExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRelationalExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RelationalExprContext relationalExpr() {
		RelationalExprContext _localctx = new RelationalExprContext(Context, State);
		EnterRule(_localctx, 12, RULE_relationalExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; additiveExpr();
			State = 115;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) {
				{
				{
				State = 111;
				_la = TokenStream.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 112; additiveExpr();
				}
				}
				State = 117;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AdditiveExprContext : ParserRuleContext {
		public MultiplicativeExprContext[] multiplicativeExpr() {
			return GetRuleContexts<MultiplicativeExprContext>();
		}
		public MultiplicativeExprContext multiplicativeExpr(int i) {
			return GetRuleContext<MultiplicativeExprContext>(i);
		}
		public AdditiveExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_additiveExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAdditiveExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AdditiveExprContext additiveExpr() {
		AdditiveExprContext _localctx = new AdditiveExprContext(Context, State);
		EnterRule(_localctx, 14, RULE_additiveExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118; multiplicativeExpr();
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__8 || _la==T__9) {
				{
				{
				State = 119;
				_la = TokenStream.La(1);
				if ( !(_la==T__8 || _la==T__9) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 120; multiplicativeExpr();
				}
				}
				State = 125;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MultiplicativeExprContext : ParserRuleContext {
		public UnaryExprContext[] unaryExpr() {
			return GetRuleContexts<UnaryExprContext>();
		}
		public UnaryExprContext unaryExpr(int i) {
			return GetRuleContext<UnaryExprContext>(i);
		}
		public MultiplicativeExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_multiplicativeExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultiplicativeExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MultiplicativeExprContext multiplicativeExpr() {
		MultiplicativeExprContext _localctx = new MultiplicativeExprContext(Context, State);
		EnterRule(_localctx, 16, RULE_multiplicativeExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126; unaryExpr();
			State = 129;
			_la = TokenStream.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) {
				{
				State = 127;
				_la = TokenStream.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 128; unaryExpr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnaryExprContext : ParserRuleContext {
		public UnionExprContext unionExpr() {
			return GetRuleContext<UnionExprContext>(0);
		}
		public UnaryExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unaryExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnaryExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnaryExprContext unaryExpr() {
		UnaryExprContext _localctx = new UnaryExprContext(Context, State);
		EnterRule(_localctx, 18, RULE_unaryExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__9) {
				{
				{
				State = 131; Match(T__9);
				}
				}
				State = 136;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 137; unionExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnionExprContext : ParserRuleContext {
		public ValueExprContext[] valueExpr() {
			return GetRuleContexts<ValueExprContext>();
		}
		public ValueExprContext valueExpr(int i) {
			return GetRuleContext<ValueExprContext>(i);
		}
		public UnionExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unionExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnionExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnionExprContext unionExpr() {
		UnionExprContext _localctx = new UnionExprContext(Context, State);
		EnterRule(_localctx, 20, RULE_unionExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139; valueExpr();
			State = 144;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__13) {
				{
				{
				State = 140; Match(T__13);
				State = 141; valueExpr();
				}
				}
				State = 146;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueExprContext : ParserRuleContext {
		public PathExprContext pathExpr() {
			return GetRuleContext<PathExprContext>(0);
		}
		public PrimaryExprContext primaryExpr() {
			return GetRuleContext<PrimaryExprContext>(0);
		}
		public RelativePathExprContext relativePathExpr() {
			return GetRuleContext<RelativePathExprContext>(0);
		}
		public PredicateContext[] predicate() {
			return GetRuleContexts<PredicateContext>();
		}
		public PredicateContext predicate(int i) {
			return GetRuleContext<PredicateContext>(i);
		}
		public ValueExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_valueExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValueExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueExprContext valueExpr() {
		ValueExprContext _localctx = new ValueExprContext(Context, State);
		EnterRule(_localctx, 22, RULE_valueExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 159;
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				{
				{
				{
				State = 147; primaryExpr();
				State = 151;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while (_la==T__33) {
					{
					{
					State = 148; predicate();
					}
					}
					State = 153;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				}
				State = 156;
				_la = TokenStream.La(1);
				if (_la==T__14 || _la==T__15) {
					{
					State = 154;
					_la = TokenStream.La(1);
					if ( !(_la==T__14 || _la==T__15) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
					    Consume();
					}
					State = 155; relativePathExpr();
					}
				}

				}
				}
				break;
			case 2:
				{
				State = 158; pathExpr();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PathExprContext : ParserRuleContext {
		public RelativePathExprContext relativePathExpr() {
			return GetRuleContext<RelativePathExprContext>(0);
		}
		public PathExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pathExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPathExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PathExprContext pathExpr() {
		PathExprContext _localctx = new PathExprContext(Context, State);
		EnterRule(_localctx, 24, RULE_pathExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 168;
			switch (TokenStream.La(1)) {
			case T__14:
				{
				{
				State = 161; Match(T__14);
				State = 163;
				switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
				case 1:
					{
					State = 162; relativePathExpr();
					}
					break;
				}
				}
				}
				break;
			case T__15:
				{
				{
				State = 165; Match(T__15);
				State = 166; relativePathExpr();
				}
				}
				break;
			case T__10:
			case T__16:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__38:
			case T__40:
			case T__41:
			case T__42:
			case PITest:
			case AxisName:
			case NCName:
				{
				State = 167; relativePathExpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RelativePathExprContext : ParserRuleContext {
		public StepExprContext[] stepExpr() {
			return GetRuleContexts<StepExprContext>();
		}
		public StepExprContext stepExpr(int i) {
			return GetRuleContext<StepExprContext>(i);
		}
		public RelativePathExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relativePathExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1W3Visitor<TResult> typedVisitor = visitor as IXPath1W3Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRelativePathExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
